# glfm

./: .gitignore  .gitmodules  LICENSE  README.md  glfw.nimble  nim.cfg
examples/: build_android.sh  build_ios.sh  htmlstripper.nim  main.nim  triangle.nim
examples/android_triangle/: local.properties
examples/android_triangle/app/src/main/cpp/: @m..@s..@s..@sUsers@sandre.vonhouck@s.nimble@spkgs@sopengl-@hhead@sopengl.nim.c  @mmain.nim.c  CMakeLists.txt  _7_7_7Users7andre.vonhouck7.nimble7pkgs7opengl-#head7opengl.nim.c  _7_7_7Users7andre.vonhouck7.nimble7pkgs7opengl-1.2.07opengl.nim.c  data.txt  glfm_platform_android.c  main.c  main.cpp  main.json  main.nim  main.nim.c  old_2_main.c  old_4_main.c  stdlib_allocators.nim.c  stdlib_assertions.nim.c  stdlib_io.nim.c  stdlib_os.nim.c  stdlib_pathnorm.nim.c  stdlib_strutils.nim.c  stdlib_system.nim.c  stdlib_times.nim.c
examples/android_triangle/gradle/wrapper/: gradle-wrapper.properties
examples/assets/: data.txt
examples/assets/icons/: data.txt
examples/ios_triangle/: Info.plist
examples/ios_triangle/example/assets/: data.txt
examples/ios_triangle/example/src/: @m..@s..@s..@sUsers@sandre.vonhouck@s.nimble@spkgs@sopengl-@hhead@sopengl.nim.c  @mmain.nim.c  _7_7_7Users7andre.vonhouck7.nimble7pkgs7opengl-1.2.07opengl.nim.c  _7_7_7_7_7_7_7Users7andre.vonhouck7.nimble7pkgs7opengl-1.2.07opengl.nim.c  file_compat.h  main.nim  main.nim.c  stdlib_allocators.nim.c  stdlib_assertions.nim.c  stdlib_dynlib.nim.c  stdlib_io.nim.c  stdlib_os.nim.c  stdlib_pathnorm.nim.c  stdlib_posix.nim.c  stdlib_system.nim.c
examples/ios_triangle/include/: glfm.h
examples/ios_triangle/ios_triangle.xcodeproj/: project.pbxproj
examples/ios_triangle/src/: @m..@s..@s..@sUsers@sandre.vonhouck@s.nimble@spkgs@sopengl-@hhead@sopengl.nim.c  @mmain.nim.c  glfm.h  glfm_platform_android.c  glfm_platform_ios.m  stdlib_io.nim.c  stdlib_strutils.nim.c  stdlib_system.nim.c  stdlib_times.nim.c
src/: glfm.nim
(+8 files in other folders)
